--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "gulp": "^3.9.1",
     "gulp-connect": "^2.2.0",
     "gulp-html-prettify": "0.0.1",
+    "gulp-image-resize": "^0.8.0",
     "gulp-jade": "^0.9.0",
     "gulp-less": "^1.3.6",
+    "gulp-local-screenshots": "^2.2.0",
     "gulp-markdown": "^1.2.0",
     "gulp-markdown-pdf": "^4.0.0",
     "gulp-notify": "^2.0.1",
